# py-vetlog-calendar

./: .all-contributorsrc  .gitignore  LICENSE  README.md  pyproject.toml
src/vetlog_calendar/: __init__.py  calendar_reader.py  main.py
