[project]
name = "py-vetlog-calendar"
version = "1.0.0"
description = "Vetlog appointments organizer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [{ name = "Jose Morales", email = "contact@josdem.io" }]
dependencies = []

[project.scripts]
version = "vetlog_calendar.main:version_check"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]