[project]
name = "py-vetlog-calendar"
version = "1.0.0"
description = "Vetlog appointments organizer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [{ name = "Jose Morales", email = "contact@josdem.io" }]
dependencies = [
  "google-auth-oauthlib>=0.4.0",
  "google-auth-httplib2>=0.0.3",
  "google-api-python-client>=1.7.9",
  "ruff>=0.14.5",
]

[project.scripts]
version = "vetlog_calendar.main:version_check"
events = "vetlog_calendar.main:list_events"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]